Rebuild tokens from characteristics; refuse the ones with abilities
21.112 found tokens were the biggest recoverable loss in the recording
pipeline — 8 of 31 boards, because addCard takes a card name and a token
is not a card. The name cannot resolve it either: 796 token classes
exist, five are Treefolk, and TokenImpl is abstract.

The collector now records token_types, token_subtypes, token_colors and
token_rules, with types and subtypes stored as the enum name() so the
export emits SubType.TREEFOLK with no spelling table between them. The
export emits one nested TokenImpl subclass per token and places it with
putOntoBattlefield, carrying tapped and attacking state.

Verified by running: the rebuilt Treefolk Token comes back as both
ATTACKER and BLOCKER from the engine.

Abilities are NOT rebuilt and that stays a refusal. Nothing can turn
"{T}: Add one mana of any color." back into Java, and a land token that
taps for mana is the case where the missing ability changes what is
castable. A vanilla stand-in would be worse than an absent token,
because it looks correct.

Also renames the launcher to magicllm-server.sh: startServer.sh ships
inside mage-server.zip, so every redeploy restored the stock version and
the server failed with a relative-path error that looked like a path bug.